--- a/src/View/JFClientes.form
+++ b/src/View/JFClientes.form
@@ -42,17 +42,17 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="cdProvincia" alignment="0" max="32767" attributes="0"/>
                           <Component id="cbEstado" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="btnGuardar" min="-2" pref="164" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="btnEliminar" pref="156" max="32767" attributes="0"/>
+                              <Component id="btnModificar" pref="156" max="32767" attributes="0"/>
                           </Group>
                           <Component id="txtCedula" alignment="0" max="32767" attributes="0"/>
                           <Component id="txtNombre" alignment="0" max="32767" attributes="0"/>
                           <Component id="txtApellidos" alignment="1" max="32767" attributes="0"/>
                           <Component id="txtCorreo" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txtProvincia" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="Correo" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -102,8 +102,8 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="Provincia" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="txtProvincia" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="cdProvincia" pref="36" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                       <Component id="txtProvincia1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="dcNacimiento" min="-2" pref="40" max="-2" attributes="0"/>
@@ -114,7 +114,7 @@
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnGuardar" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
-                          <Component id="btnEliminar" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
+                          <Component id="btnModificar" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                   </Group>
@@ -124,9 +124,9 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnEliminar">
+    <Component class="javax.swing.JButton" name="btnModificar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Eliminar"/>
+        <Property name="text" type="java.lang.String" value="Modificar"/>
         <Property name="name" type="java.lang.String" value="bntEliminar" noResource="true"/>
       </Properties>
     </Component>
@@ -381,11 +381,6 @@
         <Property name="text" type="java.lang.String" value="Provincia"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtProvincia">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtProvinciaActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JLabel" name="txtProvincia1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -415,8 +410,27 @@
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="dcNacimiento">
       <Properties>
-        <Property name="dateFormatString" type="java.lang.String" value="dd-MM-yy"/>
+        <Property name="dateFormatString" type="java.lang.String" value="dd-MMM-yy"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cdProvincia">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="8">
+            <StringItem index="0" value="Seleccionar"/>
+            <StringItem index="1" value="San Jos&#xe9;"/>
+            <StringItem index="2" value="Alajuela"/>
+            <StringItem index="3" value="Heredia"/>
+            <StringItem index="4" value="Puntarenas"/>
+            <StringItem index="5" value="Cartago"/>
+            <StringItem index="6" value="Lim&#xf3;n"/>
+            <StringItem index="7" value="Guanacaste"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
