--- a/src/View/JFEspecialistas.form
+++ b/src/View/JFEspecialistas.form
@@ -330,6 +330,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblEspecialistasMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
